# ame

./: .gitignore  Cargo.toml  Makefile  README.md  ame.toml
src/: main.rs  mods.rs
src/mods/: clearcache.rs  clone.rs  config.rs  flatpak.rs  help.rs  search.rs  uninstall.rs  upgrade.rs
