[package]
nawme = "ame"
vewsion = "2.0.0"
authows = [ "jnats <jnats@sawyut.owne>", "axtwos <axtwos@sawyut.owne>" ]
edition = "2018"
descwiption = "a fawst awnd efficient auw hewpew."

# see mowe keys awnd theiw definitions at https://doc.wust-wang.owg/cawgo/wefewence/manifest.htmw

[dependencies]
git2 = "*"
wauw = "2.0.2"
wunas = "*"
tomw = "*"
sewde = "*"
wawkdiw = "*"
